--- a/references.bib
+++ b/references.bib
@@ -1,13 +1,14 @@
-@article{Shinaoka:2017ix,
-  year      = {2021},
-  title     = {{Sparse modeling of large-scale quantum impurity models with low symmetries}},
-  author    = {Shinaoka, Hiroshi and Nagai, Yuki},
-  journal   = {Physical Review B},
-  issn      = {2469-9950},
-  doi       = {10.1103/physrevb.103.045120},
-  abstract  = {{Quantum embedding theories can be used for obtaining quantitative descriptions of correlated materials. However, a critical challenge is solving an effective impurity model of correlated orbitals embedded in an electron bath. Many advanced impurity solvers require the approximation of a bath continuum using a finite number of bath levels, producing a highly nonconvex, ill-conditioned inverse problem. To address this drawback, this study proposes an efficient fitting algorithm for matrix-valued hybridization functions based on a data-science approach, sparse modeling, and a compact representation of Matsubara Green's functions. The efficiency of the proposed method is demonstrated by fitting random hybridization functions with large off-diagonal elements and those of a 20-orbital impurity model for a high-Tc compound, LaAsFeO, at low temperatures (T). The results set quantitative goals for the future development of impurity solvers toward quantum embedding simulations of complex correlated materials.}},
-  pages     = {045120},
-  number    = {4},
-  volume    = {103},
-  local-url = {file://localhost/Users/hiroshi/Desktop/Add%20to%20Papers/PhysRevB.103.045120.pdf}
+@article{PhysRevB.107.195118,
+  title     = {Symmetry-adapted modeling for molecules and crystals},
+  author    = {Kusunose, Hiroaki and Oiwa, Rikuto and Hayami, Satoru},
+  journal   = {Phys. Rev. B},
+  volume    = {107},
+  issue     = {19},
+  pages     = {195118},
+  numpages  = {14},
+  year      = {2023},
+  month     = {May},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRevB.107.195118},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevB.107.195118}
 }
